--- a/components/account-module/main/src/main/AndroidManifest.xml
+++ b/components/account-module/main/src/main/AndroidManifest.xml
@@ -3,13 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.jamesfchen.main">
 
-    <application
-        android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
-        tools:replace="android:allowBackup">
+    <application>
         <activity
             android:name="com.jamesfchen.main.MainActivity"
             android:exported="true">
