--- a/components/home-module/build.gradle
+++ b/components/home-module/build.gradle
@@ -27,6 +27,9 @@ android {
             path "CMakeLists.txt"
         }
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 dependencies {
 //    lintChecks project(path: ':lint-rules')
