--- a/components/home-module/src/main/AndroidManifest.xml
+++ b/components/home-module/src/main/AndroidManifest.xml
@@ -111,7 +111,7 @@
         </receiver>
 
         <activity
-            android:name="com.electrolytej.main.page.search.SearchActivity"
+            android:name="com.electrolytej.main.page.web.WebSearchActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
     </application>
 
