--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,23 +21,7 @@ jobs:
       - name: Grant execute permission for gradlew
         run: cd  android && chmod +x gradlew
       - name: Build with Gradle
-        run: cd  android && ./gradlew build
-  deploy_docs:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: cp readme.md
-        run: cp README.md docs/README.md ; cp design-patterns/README.md docs/arch/design_patterns.md
-      - name: Deploy docs
-        uses: mhausenblas/mkdocs-deploy-gh-pages@master
-        # Or use mhausenblas/mkdocs-deploy-gh-pages@nomaterial to build without the mkdocs-material theme
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # CUSTOM_DOMAIN: optionaldomain.com
-          # CONFIG_FILE: folder/mkdocs.yml
-          # EXTRA_PACKAGES: build-base
-          # # GITHUB_DOMAIN: github.myenterprise.com
-          REQUIREMENTS: requirements.txt
-  
+        run: ./gradlew build
+
   
   
