--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,7 +19,7 @@ jobs:
           distribution: 'temurin'
           cache: gradle
       - name: Grant execute permission for gradlew
-        run: cd  android && chmod +x gradlew
+        run: chmod +x gradlew
       - name: Build with Gradle
         run: ./gradlew build
 
