--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,17 +25,17 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew app:assemble
 
-      # 创建realease
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+#      # 创建realease
+#      - name: Create Release
+#        id: create_release
+#        uses: actions/create-release@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          tag_name: ${{ github.ref }}
+#          release_name: Release ${{ github.ref }}
+#          draft: false
+#          prerelease: false
       # 上传apk到release
       - name: Upload Release Asset
         id: upload-release-asset
