--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -23,5 +23,9 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew app:assemble
 
-  
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: App.apk
+          path: app/build/outputs/apk/debug/app-debug.apk
   
