--- a/modules/uamp-module/automotive/build.gradle
+++ b/modules/uamp-module/automotive/build.gradle
@@ -15,7 +15,7 @@
  */
 
 plugins {
-    id "io.github.jamesfchen.app-plugin"
+    id "io.github.electrolytej.app-plugin"
 }
 ext {
     // Dependency versions.
