--- a/modules/livestreaming-module/build.gradle
+++ b/modules/livestreaming-module/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id "io.github.jamesfchen.bundle-plugin"
+    id "io.github.electrolytej.static-bundle-plugin"
 }
 apply from: "${rootDir}/script/ui_tradition.gradle"
 android {
