--- a/modules/im-module/bundle/src/main/AndroidManifest.xml
+++ b/modules/im-module/bundle/src/main/AndroidManifest.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    >
-
-    <application
-        >
-
+    xmlns:dist="http://schemas.android.com/apk/distribution">
+    <dist:module
+        dist:instant="true"
+        dist:title="@string/app_name">
+        <dist:delivery>
+            <dist:install-time />
+        </dist:delivery>
+        <dist:fusing dist:include="false" />
+    </dist:module>
+    <application>
         <activity
             android:name="com.example.compose.jetchat.NavActivity"
             android:exported="true"
