--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -12,12 +12,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Setup jdk-17
+        uses: actions/setup-java@main
         with:
-          java-version: '11'
-          distribution: 'temurin'
-          cache: gradle
+          java-version: 17
+          distribution: 'adopt'
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
