--- a/app/build.gradle
+++ b/app/build.gradle
@@ -221,12 +221,12 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     project.depsConfig("implementation", "hotel-bundle1")
     project.depsConfig("implementation", "hotel-bundle2")
+    project.depsConfig("implementation", "hotel-foundation")
+    project.depsConfig("implementation", "commerce-bundle")
     project.depsConfig("implementation", "main-module")
     project.depsConfig("implementation", "feeds-module")
     project.depsConfig("implementation", "account-module")
     project.depsConfig("implementation", "codescanner-qrcode")
-    project.depsConfig("implementation", "im-chatroom")
-    project.depsConfig("implementation", "hotel-foundation")
     project.depsConfig("implementation", "update-module")
     implementation project.moduleify("framework-base")
 //    implementation project.moduleify("framework-mockserver")
