--- a/modules/uamp-module/main/build.gradle
+++ b/modules/uamp-module/main/build.gradle
@@ -1,10 +1,13 @@
 plugins {
-    id "io.github.electrolytej.app-plugin"
+    alias(libs.plugins.android.application)
+    alias(libs.plugins.ksp)
 }
 android {
+    compileSdkVersion = Integer.parseInt(rootProject.compileSdkVersion)
     namespace "com.example.android.uamp"
     defaultConfig {
         resValue "string", "app_name","u"
+        targetSdkVersion  Integer.parseInt(rootProject.targetSdkVersion)
     }
     buildFeatures {
         viewBinding true
@@ -41,7 +44,7 @@ ext {
 dependencies {
     implementation "com.android.support:multidex:$multidex_version"
 
-    implementation project.moduleify('uamp-uamp')
+    implementation project(":modules:uamp-module:uamp")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
@@ -54,5 +57,5 @@ dependencies {
 
     // Glide dependencies
     implementation "com.github.bumptech.glide:glide:$glide_version"
-    kapt "com.github.bumptech.glide:compiler:$glide_version"
+    ksp "com.github.bumptech.glide:compiler:$glide_version"
 }
