--- a/.github/workflows/gen_web.yml
+++ b/.github/workflows/gen_web.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-#      - name: cp readme.md
-#        run: cp README.md docs/index.md
+      - name: cp README.md
+        run: cp README.md docs/index.md
       - name: Deploy docs
         uses: mhausenblas/mkdocs-deploy-gh-pages@master
         # Or use mhausenblas/mkdocs-deploy-gh-pages@nomaterial to build without the mkdocs-material theme
