--- a/modules/im-module/bundle/build.gradle
+++ b/modules/im-module/bundle/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id "io.github.electrolytej.dynamic-bundle-plugin"
+    id("com.google.devtools.ksp")
     alias(libs.plugins.compose)
 }
 apply from: "${rootDir.path}/script/ui_compose.gradle"
@@ -14,7 +15,7 @@ composeCompiler {
 }
 dependencies {
     implementation project.moduleify('framework-base')
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    ksp 'com.github.bumptech.glide:ksp:4.14.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.github.madrapps:plot:0.1.1'
 }
