--- a/modules/uamp-module/main/build.gradle
+++ b/modules/uamp-module/main/build.gradle
@@ -57,5 +57,5 @@ dependencies {
 
     // Glide dependencies
     implementation "com.github.bumptech.glide:glide:$glide_version"
-    ksp "com.github.bumptech.glide:compiler:$glide_version"
+    ksp "com.github.bumptech.glide:ksp:$glide_version"
 }
