--- a/modules/uamp-module/uamp/build.gradle
+++ b/modules/uamp-module/uamp/build.gradle
@@ -16,6 +16,7 @@
 
 plugins {
     id "io.github.electrolytej.static-bundle-plugin"
+    id("com.google.devtools.ksp")
 }
 
 android {
@@ -94,7 +95,7 @@ dependencies {
 
     // Glide dependencies
     api "com.github.bumptech.glide:glide:$glide_version"
-    kapt "com.github.bumptech.glide:compiler:$glide_version"
+    ksp "com.github.bumptech.glide:ksp:$glide_version"
 
     // Testing
     testImplementation "junit:junit:$junit_version"
