--- a/app/build.gradle
+++ b/app/build.gradle
@@ -221,7 +221,7 @@ android {
 }
 dependencies {
 //    ksp 'com.github.bumptech.glide:compiler:4.11.0'
-    ksp 'com.github.bumptech.glide:ksp:4.14.0'
+    ksp(libs.glide.ksp)
 //    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     project.depsConfig("implementation", "hotel-bundle1")
     project.depsConfig("implementation", "hotel-bundle2")
