--- a/modules/im-module/bundle/build.gradle
+++ b/modules/im-module/bundle/build.gradle
@@ -15,7 +15,7 @@ composeCompiler {
 }
 dependencies {
     implementation project.moduleify('framework-base')
-    ksp 'com.github.bumptech.glide:ksp:4.14.0'
+    ksp(libs.glide.ksp)
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.github.madrapps:plot:0.1.1'
 }
