--- a/base/build.gradle
+++ b/base/build.gradle
@@ -142,12 +142,10 @@ dependencies {
      * ===============================image start=============================
      */
     api "androidx.exifinterface:exifinterface:${EXIFINTERFACE_VERISON}"
-
-    api "com.github.bumptech.glide:glide:${GLIDE_VERSION}"
-    api "com.github.bumptech.glide:recyclerview-integration:${GLIDE_VERSION}"
-    api "com.github.bumptech.glide:okhttp3-integration:${GLIDE_VERSION}"
-//    ksp 'com.github.bumptech.glide:compiler:4.11.0'
-    ksp 'com.github.bumptech.glide:ksp:4.14.0'
+    api(libs.glide.core)
+    api(libs.glide.recyclerview)
+    api(libs.glide.okhttp3)
+    ksp(libs.glide.ksp)
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     api "com.facebook.fresco:fresco:${FRESCO_VERSION}"
