--- a/modules/hotel-module/bundle1/build.gradle
+++ b/modules/hotel-module/bundle1/build.gradle
@@ -18,7 +18,7 @@ composeCompiler {
 dependencies {
     implementation project.moduleify("hotel-foundation")
     implementation project.moduleify('framework-base')
-    ksp 'com.github.bumptech.glide:ksp:4.14.0'
+    ksp(libs.glide.ksp)
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.github.madrapps:plot:0.1.1'
 }
