--- a/modules/ad-module/ad-bundle/build.gradle
+++ b/modules/ad-module/ad-bundle/build.gradle
@@ -46,4 +46,5 @@ dependencies {
 //    implementation("com.taobao.android:securitybodyaar3:5.0.0.9-v6@aar")
 //    implementation("com.taobao.android:sgmiddletieraar3:5.0.0.9-v6@aar")
 //    implementation("com.alibaba:fastjson:1.1.71.android")
+    implementation("com.pangle.cn:ads-sdk-pro:6.5.0.4")
 }
