--- a/modules/hotel-module/bundle2/build.gradle
+++ b/modules/hotel-module/bundle2/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     implementation project.moduleify("hotel-foundation")
     implementation project.moduleify('framework-base')
     ksp(libs.glide.ksp)
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     api 'androidx.databinding:databinding-runtime:8.2.0'
     api 'com.github.markzhai:databinding-rv-adapter:1.0.1'
 }
