--- a/modules/main-module/build.gradle
+++ b/modules/main-module/build.gradle
@@ -45,14 +45,14 @@ android {
 }
 dependencies {
 //    lintChecks project(path: ':lint-rules')
-    implementation project.moduleify("account-module")
+    project.depsConfig("implementation", "account-module")
     implementation project.moduleify('hotel-export')
     implementation project.moduleify('framework-base')
 //    ksp 'com.github.bumptech.glide:compiler:4.11.0'
     ksp(libs.glide.ksp)
 //    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     api 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
-    implementation 'com.github.chrisbanes:PhotoView:2.0.+'
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
     implementation 'top.zibin:Luban:1.1.8'
     implementation 'com.danikula:videocache:2.7.1'
     implementation 'com.github.danylovolokh:video-player-manager:0.2.0'
